fixed overflow in project

--- a/scss/style.scss
+++ b/scss/style.scss
@@ -137,6 +137,7 @@ a {
 
       .project {
         position: relative;
+        overflow: hidden;
 
         .img {
           overflow: hidden;
